Refactor CSS classes for improved readability and responsiveness

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-slate-50 flex py-4 justify-center h-screen">
-    <div id="root"></div>
+  <body class="flex h-screen justify-center bg-slate-50 py-4 max-sm:w-full">
+    <div id="root" class="max-sm:m-2 max-sm:w-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
